# Dictinoary-C

./: BluePrint  CMakeLists.txt  CMakelists.txt  Out.txt  data.txt  log.txt  tmp.txt  total code.txt
src/: Display.c  FileHandling.c  Movement.c  Remove.c  Trail.c  create.c  data.txt  dataHandle.c  defs.h  helper.c  main.c  menu.c  search.c
